cabal-version: 3.0
-- The cabal-version field refers to the version of the .cabal specification.

-- The name of the package.
name: InterviewPreparation

-- The package version.
version: 0.1.0.0

build-type: Simple

common settings
    ghc-options: -Wall

    -- Directories containing source files.
    hs-source-dirs: .

    -- Base language which the package is written in.
    default-language: Haskell2010

executable FraudulentActivityNotifications
    -- Import common settings.
    import: settings

    -- .hs or .lhs file containing the Main module.
    main-is: FraudulentActivityNotifications.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:
        vector,
        vector-algorithms,
        base ^>=4.17.2.1


executable FraudulentActivityNotificationsMap
    -- Import common settings.
    import: settings

    -- .hs or .lhs file containing the Main module.
    main-is: FraudulentActivityNotificationsMap.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:
        vector,
        containers,
        base ^>=4.17.2.1